fix positioning fix stray tooltip on mobile

--- a/Lightbox/Addons/_Main/Lightbox.scss
+++ b/Lightbox/Addons/_Main/Lightbox.scss
@@ -1,7 +1,7 @@
 /* Copyright © 2021 Softel vdm, Inc. - https://yetawf.com/Documentation/YetaWF/Lightbox#License */
 
 .lightboxOverlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -12,7 +12,7 @@
 }
 
 .lightbox {
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     padding-top: 50px;
